...
            static let previousButton = "KeyboardAccessory.previousButton"
            static let addressAutofillButton = "KeyboardAccessory.addressAutofillButton"
            static let creditCardAutofillButton = "KeyboardAccessory.creditCardAutofillButton"
        }

        struct AddressToolbar {
            static let lockIcon = "AddressToolbar.lockIcon"
            static let searchTextField = "AddressToolbar.address"
            static let searchEngine = "AddressToolbar.searchEngine"
        }

        struct ToolbarButtons {
            static let qrCode = "Toolbar.QRCode.button"
...
        static let bottomLeftButton = "libraryPanelBottomLeftButton"
        static let bottomRightButton = "bookmarksPanelBottomRightButton"
        static let bottomSearchButton = "historyBottomSearchButton"
        static let bottomDeleteButton = "historyBottomDeleteButton"

        struct BookmarksPanel {
            static let tableView = "Bookmarks List"
            static let bookmarksCell = "BookmarksPanel.BookmarksCell"
            static let bookmarksCellDisclosureButton = ".DisclosureButton"
            static let emptyStateLogoImage = "BookmarksPanel.EmptyState.emptyStateLogoImage"
            static let emptyStateTitleLabel = "BookmarksPanel.EmptyState.emptyStateTitleLabel"
            static let emptyStateBodyLabel = "BookmarksPanel.EmptyState.emptyStateBodyLabel"
            static let emptyStateSignInButton = "BookmarksPanel.EmptyState.signInButton"
            static let titleTextField = "BookmarkDetail.titleTextField"
            static let urlTextField = "BookmarkDetail.urlTextField"
            static let bookmarkParentFolderCell = "BookmarksDetail.ParentFolderSelector.FolderCell"
            static let newFolderCell = "BookmarksDetail.ParentFolderSelector.NewFolderCell"
            static let saveButton = "BookmarksDetail.SaveButton"
            static let titleTextFieldClearButton = "BookmarksDetail.TitleTextFieldClearButton"
            static let urlTextFieldClearButton = "BookmarksDetail.UrlTextFieldClearButton"
        }

        struct HistoryPanel {
            static let tableView = "History List"
...
        static let upgrade = "upgrade."
        static let closeButton = "Upgrade.CloseButton"
        static let pageControl = "Upgrade.PageControl"
    }

    struct Settings {
        static let title = "Settings"
        static let tableViewController = "AppSettingsTableViewController.tableView"
        static let navigationBarItem = "AppSettingsTableViewController.navigationItem.rightBarButtonItem"

        struct Appearance {
            static let browserThemeSectionTitle = "BrowserThemeSectionTitle"
            static let websiteAppearanceSectionTitle = "WebsiteAppearanceSectionTitle"
...
                static let wallpaper = "WallpaperSettings"
            }
        }

        struct FirefoxAccount {
            static let continueButton = "Sign up or sign in"
            static let emailTextField = "Enter your email"
            static let fxaNavigationBar = "Sync and Save Data"
            static let fxaSettingsButton = "Sync and Save Data"
            static let fxaSignInButton = "EmailSignIn.button"
            static let qrButton = "QRCodeSignIn.button"
            static let qrScanFailedAlertOkButton = "qrCodeAlert.okButton"
            static let signInButton = "Sign in"
        }

        struct Search {
            static let title = "Search"
            static let customEngineViewButton = "customEngineViewButton"
            static let searchNavigationBar = "Search"
...
                static let title = "Addresses"
                static let addAddress = "Add address"
            }
        }

        struct ConnectSetting {
            static let title = "SignInToSync"
        }

        struct ContentBlocker {
            static let title = "TrackingProtection"
        }

...
